--- a/Jour1/transformation css/css/theme.css
+++ b/Jour1/transformation css/css/theme.css
@@ -1,11 +1,14 @@
 /* Le code CSS de la démo */
 
 .animation{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 0;
     margin: 0;
-    border: 3px solid #DD5735;
+    border: 5px solid #DD5735;
     position: relative;
-    height: 277.59px;
+
     border-radius: 50%;
     z-index: 0;
 
@@ -23,14 +26,17 @@ article{
 
 img{
     border-radius: 50%;
-    padding: 0.8em;
+    padding: 1.5em;
     margin: 0;
     z-index: 1;
+    height: 277.59px;
+    width: 277.59px;
 }
 
 img:hover{
     animation-name: scale-anim;
     animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
 
 p{
@@ -50,11 +56,11 @@ main{
 }
 
 @keyframes scale-anim{
-    from {
+    0% {
         transform: scale(1);
     }
 
-        to {
+    100% {
         transform: scale(0.5);
 
     }
