--- a/Jour2/ex-freshly restaurant/css/common-v3.css
+++ b/Jour2/ex-freshly restaurant/css/common-v3.css
@@ -134,7 +134,8 @@ MAIN LAYOUT
 	background-image: url(../ressources/images/footer-bg.jpg);
 	color: #fff;
 	text-align: center;
-	margin-top: 0;
+	margin-bottom: 0;
+    padding: 0.5rem 2rem;
 
 }
 
