--- a/Jour2/ex-freshly restaurant/css/theme.css
+++ b/Jour2/ex-freshly restaurant/css/theme.css
@@ -35,6 +35,33 @@ menu li{
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: color 1s, background-color 1s;
+
+}
+
+menu li{
+    color: #fff;
+    background: #ebe3db;
+}
+
+menu li a{
+    font-family: 'Athiti', sans-serif;	
+    text-decoration: none;
+    color: #000;
+}
+ a:link{
+    text-decoration: none;
+ }
+
+
+menu li:hover{
+    color: #fff;
+    background: #950000;
+}
+
+menu li:{
+    color: #fff;
+    background: #950000;
 }
 
 img{
@@ -66,11 +93,11 @@ display: flex;
 flex-direction: column;
 }
 
-.menu li{
+section ul li{
     list-style: none;
     border-bottom: 1px dashed #000;
-
 }
+
 
 .footer-2 h5{
     border-bottom: 1px dashed #fff;
@@ -81,6 +108,8 @@ flex-direction: column;
     padding-bottom: 2rem;
     margin-bottom: 0;
 }
+
+
 /***************************************************************
 Media queries
 ****************************************************************/
